{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 5,
  "lineage": "5f1eaecb-daec-bb36-cc94-bd9c338117a7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ccs_az_nsg_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/ccsaznsg/providers/Microsoft.Network/networkSecurityGroups/ccsaznsgnsg",
            "location": "westeurope",
            "name": "ccsaznsgnsg",
            "resource_group_name": "ccsaznsg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.ccs_az_nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ccs_az_nsg_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/ccsaznsg/providers/Microsoft.Network/networkSecurityGroups/ccsaznsgnsg/securityRules/ccsaznsgrule1",
            "name": "ccsaznsgrule1",
            "network_security_group_name": "ccsaznsgnsg",
            "priority": 101,
            "protocol": "Icmp",
            "resource_group_name": "ccsaznsg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.ccs_az_nsg_nsg",
            "azurerm_resource_group.ccs_az_nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ccs_az_nsg_rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/ccsaznsg/providers/Microsoft.Network/networkSecurityGroups/ccsaznsgnsg/securityRules/ccsaznsgrule2",
            "name": "ccsaznsgrule2",
            "network_security_group_name": "ccsaznsgnsg",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "ccsaznsg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.ccs_az_nsg_nsg",
            "azurerm_resource_group.ccs_az_nsg"
          ]
        }
      ]
    }
  ]
}